--- a/assets/sass/202312product_zakka2.scss
+++ b/assets/sass/202312product_zakka2.scss
@@ -433,9 +433,10 @@ body {
         }
 
         &.show {
-          .heading {
+          .heading,.yoyaku {
             clip-path: inset(0 0 0 0);
             filter: blur(0);
+            opacity: 1;
           }
 
           .page2-main {
@@ -468,7 +469,7 @@ body {
           position: relative;
           margin-top: calc(63px / 2);
           clip-path: inset(0 0 100% 0);
-          transition: 0.7s ease;
+          transition: 0.7s ease .5s,opacity 1s ease .5s;
           filter: blur(4px);
           z-index: 4;
 
@@ -513,7 +514,7 @@ body {
           margin-top: calc(56px / 2);
           opacity: 0;
           filter: blur(10px);
-          transition: 0.8s ease 0.6s;
+          transition: 0.8s ease 0.1s;
 
           @include mq_maxH() {
             width: calc((348 / 1270) * #{$new_vh});
@@ -526,6 +527,10 @@ body {
           width: calc(107px / 2);
           top: calc(71px / 2);
           left: calc(37px / 2);
+          opacity: 0;
+          clip-path: inset(0 0 100% 0);
+          transition: 0.7s ease .5s,opacity 1s ease .5s;
+          filter: blur(4px);
           @include mq_maxH() {
             width: calc((107 / 1270) * #{$new_vh});
             top: calc((71 / 1270) * #{$new_vh});
