--- a/assets/sass/202312product_zakka2.scss
+++ b/assets/sass/202312product_zakka2.scss
@@ -1275,6 +1275,7 @@ body {
           font-size: 14px;
           margin-bottom: calc(31px / 2);
           transition: 0.3s ease;
+          position: relative;
           @include mq_maxH() {
             width: calc((563 / 1270) * #{$new_vh});
             margin-bottom: calc((31 / 1270) * #{$new_vh});
@@ -1283,13 +1284,35 @@ body {
             border-radius: calc((56 / 1270) * #{$new_vh});
           }
 
+
+
           @include mq {
             &:hover {
-              color: #fff;
-              background: #343c55;
+              // color: #fff;
+              // background: #343c55;
 
-              .insta-icon{
-                background-image: url(/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/insta-icon-hover.png);
+              // .insta-icon{
+              //   background-image: url(/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/insta-icon-hover.png);
+              // }
+              &::before{
+                opacity: .6;
+              }
+            }
+
+            &::before{
+              content: '';
+              display: block;
+              width: 100%;
+              height: 100%;
+              background: #fff;
+              opacity: 0;
+              transition: .3s ease;
+              position: absolute;
+              top: 0;
+              left: 0;
+              border-radius: calc(56px / 2);
+              @include mq_maxH() {
+                width: calc((563 / 1270) * #{$new_vh});
               }
             }
           }
@@ -1332,6 +1355,7 @@ body {
           @include DNPShueiMinPr6N_B();
           font-size: 14px;
           transition: 0.3s ease;
+          position: relative;
 
           @include mq_maxH() {
             width: calc((563 / 1270) * #{$new_vh});
@@ -1342,8 +1366,26 @@ body {
 
           @include mq{
             &:hover {
-              color: #fff;
-              background: #343c55;
+              &::before{
+                opacity: .6;
+              }
+            }
+
+            &::before{
+              content: '';
+              display: block;
+              width: 100%;
+              height: 100%;
+              background: #fff;
+              opacity: 0;
+              transition: .3s ease;
+              position: absolute;
+              top: 0;
+              left: 0;
+              border-radius: calc(56px / 2);
+              @include mq_maxH() {
+                width: calc((563 / 1270) * #{$new_vh});
+              }
             }
           }
 
