--- a/assets/sass/202312product_zakka1.scss
+++ b/assets/sass/202312product_zakka1.scss
@@ -110,7 +110,7 @@ img {
 }
 .scroll-in.show {
 	opacity: 1;
-	transition: .5s ease;
+	transition:opacity .5s ease;
 	// transform: none!important;
 }
 body, html {
@@ -162,7 +162,7 @@ body {
       &.show {
         opacity: 1;
         visibility: visible;
-        transition: 1s ease;
+        transition:opacity 1s ease,visibility 1s ease;
         .main-visual {
           .main-pan-logo, .main-brand-logo {
             img {
@@ -359,7 +359,6 @@ body {
       align-items: flex-start;
       width: fit-content;
       background: linear-gradient(90deg, $bg_color, #343c55);
-      transition: box-shadow 0.5s ease 3s;
       @include mq_maxH() {
         height: 100%;
       }
@@ -379,6 +378,7 @@ body {
           .heading{
             clip-path: inset(0 0 0 0);
             filter: blur(0);
+            opacity: 1;
           }
 
           .page1-main{
@@ -420,8 +420,9 @@ body {
           position:relative;
           margin-top: calc(63px/2);
           clip-path: inset(0 0 100% 0);
-          transition: .7s ease;
-          filter: blur(4px);
+          opacity: 0;
+          transition:clip-path .7s ease .1s,opacity 1s ease .1s;
+          // filter: blur(4px);
 
           @include mq_maxH() {
             margin-top: calc((63/1270) * #{$new_vh});
@@ -461,7 +462,7 @@ body {
           margin-top: 10px;
           opacity: 0;
           filter: blur(10px);
-          transition: .8s ease .6s;
+          transition:filter .8s ease .6s,opacity .8s ease .6s;
 
           @include mq_maxH() {
             width: calc((348/1270) * #{$new_vh});
@@ -513,7 +514,7 @@ body {
           cursor: pointer;
           opacity: 0;
           clip-path: inset(0 100% 0 0);
-          transition: .6s ease .9s;
+          transition:clip-path .6s ease .9s,opacity 1s ease .9s;
           padding-top: 4%;
 
           @include mq_maxH() {
@@ -1092,10 +1093,45 @@ body {
               right: 0;
               margin-top: calc(703px/2);
               margin-right: calc(300px/2);
+              transform: translateX(-28px);
+              transition:transform 1s ease,opacity .5s ease;
+              opacity: 0;
+
+              img{
+                animation: usagiAnim 2s linear 1s 1;
+              }
+
+              &.show{
+                transform: translateX(0);
+                opacity: 1;
+              }
               @include mq_maxH() {
                 width: calc((223/1270) * #{$new_vh});
                 margin-top: calc((703/1270) * #{$new_vh});
                 margin-right: calc((300/1270) * #{$new_vh});
+                transform: calc((56/1270) * #{$new_vh});
+              }
+
+              @keyframes usagiAnim{
+                0% {
+                  transform: rotate(0);
+              }
+              10% {
+                  transform: rotate(12deg);
+              }
+              20% {
+                  transform: rotate(0);
+              }
+              
+              30% {
+                  transform: rotate(12deg);
+              }
+              40% {
+                  transform: rotate(0);
+              }
+              100% {
+                  transform: rotate(0);
+              }
               }
             }
 
@@ -1106,6 +1142,14 @@ body {
               right: 0;
               margin-top: calc(708px/2);
               margin-right: calc(-86px/2);
+              transition:transform 1s ease,opacity .5s ease;
+              opacity: 0;
+              transform: translateX(-28px);
+
+              &.show{
+                transform: translateX(0);
+                opacity: 1;
+              }
               @include mq_maxH() {
                 width: calc((333/1270) * #{$new_vh});
                 margin-top: calc((708/1270) * #{$new_vh});
@@ -1212,9 +1256,10 @@ body {
               left: 0;
               margin-top: calc(663px/2);
               margin-left: calc(-143px/2);
-              transform: translateY(10px);
-              transition:all 1.4s ease .2s;
+              // transform: translateY(10px);
+              transition:opacity 1.4s ease .2s;
               opacity: 0;
+              animation: crownAnim2 4s ease-in-out .3s infinite;
 
               &.show{
                 transform: translateY(0);
@@ -1224,6 +1269,18 @@ body {
                 width: calc((263/1270) * #{$new_vh});
                 margin-top: calc((663/1270) * #{$new_vh});
                 margin-left: calc((-143/1270) * #{$new_vh});
+              }
+
+              @keyframes crownAnim2{
+                0%{
+                  transform: translateY(5px);
+                }
+                50%{
+                  transform: translateY(-5px);
+                }
+                100%{
+                  transform: translateY(5px);
+                }
               }
             }
           }
@@ -1337,9 +1394,10 @@ body {
               margin-top: calc(770px/2);
               margin-left: calc(-32px/2);
               z-index: 1;
-              transition:all 1.4s ease .2s;
+              transition:opacity 1.4s ease .2s;
               opacity: 0;
-              transform: translateX(10px);
+              // transform: translateX(10px);
+              animation: crownAnim 5s ease-in-out infinite;
 
               &.show{
                 transform: translateX(0);
@@ -1612,9 +1670,10 @@ body {
                 margin-left: calc((-149/1270) * #{$new_vh});
               }
 
-              transition:all 1.4s ease .2s;
+              transition:opacity 1.4s ease .2s;
               opacity: 0;
-              transform: translateX(-10px);
+              // transform: translateX(-10px);
+              animation: crownAnim 5s ease-in-out infinite;
 
               &.show{
                 transform: translateX(0);
@@ -2786,7 +2845,6 @@ body {
           width: calc(563px/2);
           border-radius: calc(56px/2);
           padding: calc(39px/2) 0;
-          @include DNPShueiMinPr6N_B();
           font-size: 14px;
           margin-bottom: calc(31px/2);
           transition: .3s ease;
@@ -2818,6 +2876,7 @@ body {
           .insta-txt{
             font-size: 14px;
             font-feature-settings: "palt";
+            @include DNPShueiMinPr6N_B();
             @include mq_maxH() {
               font-size: calc((28/1270) * #{$new_vh});
             }
