--- a/assets/sass/202312product_zakka2.scss
+++ b/assets/sass/202312product_zakka2.scss
@@ -202,7 +202,7 @@ img {
 }
 .scroll-in.show {
   opacity: 1;
-  transition: 0.5s ease;
+  transition:opacity 0.5s ease;
   // transform: none!important;
 }
 body,
@@ -227,14 +227,7 @@ body {
 }
 
 .g-container {
-  opacity: 0;
-  visibility: hidden;
-  transition:opacity 1s ease,visibility 1s ease;
 
-  &.show{
-    opacity: 1;
-    visibility: visible;
-  }
   &.scrollable-vertical {
     ////縦スクロールで横にスクロールさせる。
     height: 1000vh;
@@ -301,6 +294,14 @@ body {
   // @include font_DNP_ShueiMGoStd_B();
   font-feature-settings: normal;
   color: #000;
+  opacity: 0;
+  visibility: hidden;
+  transition:opacity 1s ease,visibility 1s ease;
+
+  &.show{
+    opacity: 1;
+    visibility: visible;
+  }
 
   .scroll-contents {
     height: 100%;
@@ -439,6 +440,8 @@ body {
         flex-direction: column;
         align-items: center;
         position: relative;
+        z-index: 10;
+        background: #f4e9bf;
         @include mq_maxH() {
           min-width: calc((750 / 1270) * #{$new_vh});
         }
@@ -480,13 +483,15 @@ body {
           position: relative;
           margin-top: calc(63px / 2);
           clip-path: inset(0 0 100% 0);
-          transition: 0.7s ease .5s,opacity 1s ease .5s;
-          filter: blur(4px);
+          transition:clip-path 0.7s ease .6s,opacity .8s ease .6s;
+          // filter: blur(4px);
           z-index: 4;
+          // padding: 0 calc(49px/2) 0 calc(47px/2);
 
           @include mq_maxH() {
             width: calc((660 / 1270) * #{$new_vh});
             margin-top: calc((63 / 1270) * #{$new_vh});
+            // padding:0  calc((49 / 1270) * #{$new_vh}) 0 calc((47 / 1270) * #{$new_vh});
           }
         }
 
@@ -505,18 +510,16 @@ body {
         }
 
         .page2-main {
-          width: calc(750px / 2);
+          min-width: calc(750px / 2);
           opacity: 0;
           position: absolute;
           bottom: 0;
           left: 0;
           transform: translateY(10px);
-          transition:
-            opacity 1s ease 0.3s,
-            transform 1s ease 0.3s;
+          transition: opacity 1s ease 0.3s,transform 1s ease 0.3s;
 
           @include mq_maxH() {
-            width: calc((750 / 1270) * #{$new_vh});
+            min-width: calc((750 / 1270) * #{$new_vh})!important;
           }
         }
 
@@ -525,7 +528,7 @@ body {
           margin-top: calc(56px / 2);
           opacity: 0;
           filter: blur(10px);
-          transition: 0.8s ease 0.1s;
+          transition:opacity 0.8s ease 0.2s,filter .8s ease .2s;
 
           @include mq_maxH() {
             width: calc((348 / 1270) * #{$new_vh});
@@ -540,8 +543,8 @@ body {
           left: calc(37px / 2);
           opacity: 0;
           clip-path: inset(0 0 100% 0);
-          transition: 0.7s ease .5s,opacity 1s ease .5s;
-          filter: blur(4px);
+          transition:clip-path 0.7s ease .5s,opacity .8s ease .5s,filter .8s ease .5s;
+          // filtser: blur(4px);
           @include mq_maxH() {
             width: calc((107 / 1270) * #{$new_vh});
             top: calc((71 / 1270) * #{$new_vh});
@@ -556,7 +559,7 @@ body {
           top: calc(574px / 2);
           opacity: 0;
           visibility: hidden;
-          transition: 0.6s ease 1.2s;
+          transition:opacity 0.6s ease 1.2s,visibility .6s ease 1.2s;
 
           @include mq_maxH() {
             width: calc((69 / 1270) * #{$new_vh});
@@ -590,7 +593,7 @@ body {
           cursor: pointer;
           opacity: 0;
           clip-path: inset(0 100% 0 0);
-          transition: 0.6s ease 0.9s;
+          transition:clip-path .6s ease 1s,opacity 1s ease 1s;
           padding-top: 10px;
           z-index: 5;
 
@@ -652,6 +655,19 @@ body {
           }
         }
       }
+      // .item-background{
+      //   position: absolute;
+      //   left: 0;
+      //   top: 0;
+      //   // width: 140.4%;
+      //   width: 100%;
+      //   height: calc(1270px/2);
+      //   background-image: url(/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/illust-background.jpg);
+      //   background-size: cover;
+      //   background-position: 0 0;
+      //   background-repeat: repeat;
+      //   // transition: background 3s linear;
+      // }
 
       .item-content-wrapper {
         ///アイテムコンテンツ
@@ -661,14 +677,15 @@ body {
         align-items: center;
         position: relative;
         z-index: 3;
+        gap: calc(650px / 2);
         background-image: url(/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/illust-background.jpg);
         background-size: 100% 100%;
+        background-position: 0 0;
         background-repeat: no-repeat;
-        gap: calc(455px / 2);
 
         height: 100%;
         @include mq_maxH() {
-          gap: calc((455 / 1270) * #{$new_vh});
+          gap: calc((650 / 1270) * #{$new_vh});
         }
         .item-block {
           position: relative;
@@ -679,10 +696,10 @@ body {
           border-radius: calc(30px / 2);
           border: 0.5px solid #000;
           transform: translateY(-30px);
-          transition: .5s ease;
+          transition: 0.5s ease;
           opacity: 0;
 
-          &.show{
+          &.show {
             transform: translateY(0);
             opacity: 1;
           }
@@ -707,7 +724,7 @@ body {
                 .ph2 img,
                 .ph-switch img {
                   transform: scale(1.02);
-                  transition: 0.3s ease;
+                  transition:transform 0.3s ease;
                 }
               }
             }
@@ -780,7 +797,7 @@ body {
             position: relative;
             z-index: 2;
             filter: blur(10px);
-            transition: 0.5s ease-in-out .3s,opacity 0.5s ease-in-out .2s;
+            transition:filter 0.5s ease-in-out .3s,opacity 0.5s ease-in-out .2s;
             opacity: 0;
 
             &.show {
@@ -893,9 +910,10 @@ body {
               }
             }
 
-            margin-left: calc(514px / 2);
+            // margin-left: 432.2px;
+            // margin-left: 257px;
             @include mq_maxH() {
-              margin-left: calc((514 / 1270) * #{$new_vh});
+              // margin-left: calc((514 / 1270) * #{$new_vh});
             }
           }
 
@@ -1271,7 +1289,6 @@ body {
           width: calc(563px / 2);
           border-radius: calc(56px / 2);
           padding: calc(31px / 2) 0;
-          @include DNPShueiMinPr6N_B();
           font-size: 14px;
           margin-bottom: calc(31px / 2);
           transition: 0.3s ease;
@@ -1337,6 +1354,7 @@ body {
           .insta-txt {
             font-size: 14px;
             font-feature-settings: "palt";
+            @include DNPShueiMinPr6N_B();
             @include mq_maxH() {
               font-size: calc((28 / 1270) * #{$new_vh});
             }
@@ -1397,6 +1415,8 @@ body {
         height: calc(1270px / 2);
         color: #000;
         background: #7eb8cb;
+        position: relative;
+        z-index: 100;
         @include mq_maxH() {
           min-width: calc((752 / 1270) * #{$new_vh});
           height: calc((1270 / 1270) * #{$new_vh});
@@ -1664,12 +1684,12 @@ body {
   align-items: center;
   position: relative;
   z-index: 3;
-  gap: calc(455px / 2);
+  gap: calc(650px / 2);
   height: 100%;
-  transition: 0.5s ease 0.1s;
-  margin-left: 100px;
+  transition: 0.1s ease;
+  // margin-left: 100px;
   @include mq_maxH() {
     // margin-left: calc((97 / 1270) * #{$new_vh});
-    margin-left: calc((150 / 1270) * #{$new_vh});
+    // margin-left: calc((150 / 1270) * #{$new_vh});
   }
 }
