--- a/assets/sass/202312product_zakka.scss
+++ b/assets/sass/202312product_zakka.scss
@@ -130,7 +130,7 @@ body, html {
   flex-direction: column;
   opacity: 0;
   visibility: hidden;
-  transition:all 1s ease ;
+  transition:opacity 1s ease ;
   overflow: hidden;
 
   &.show{
@@ -166,6 +166,7 @@ body, html {
 
     .page-btn{
       width: calc(272/1054)*100%;
+      opacity: 1;
     }
 
     .page-btn-txt{
@@ -177,12 +178,9 @@ body, html {
       transform: translateX(0);
       .page-ofuda{
         img{
-          animation: sample_anime01 2.8s ease 2.1s;
+          animation: sample_anime01 2.8s ease 2s;
           opacity: 1;
 
-          @include mq{
-            animation: sample_anime01 2.8s ease 2.3s;
-          }
         }
       }
     }
@@ -191,12 +189,9 @@ body, html {
       transform: translateX(0);
       .page-ofuda{
         img{
-          animation: sample_anime02 2.8s ease 2.1s;
+          animation: sample_anime02 2.8s ease 2s;
           opacity: 1;
 
-          @include mq{
-            animation: sample_anime02 2.8s ease 2.3s;
-          }
         }
       }
     }
@@ -217,7 +212,7 @@ body, html {
   right: calc(38/$base_w_sp)*100%;
   z-index: 4;
   clip-path: inset(0 0 100% 0);
-  transition: 1s ease 1.4s;
+  transition:opacity 1s ease 1.3s,clip-path 1s ease 1.3s;
   opacity: 0;
 }
 .heading{
@@ -226,7 +221,7 @@ body, html {
   justify-content: center;
   clip-path: inset(0 0 100% 0);
   opacity: 0;
-  transition:all .8s ease 1.3s;
+  transition:clip-path .8s ease 1.3s,opacity 1s ease 1.3s;
   
   @include mq{
     margin-top: calc(79/1054)*100%;
@@ -299,7 +294,7 @@ body, html {
   z-index: 3;
   opacity: 0;
   filter: blur(10px);
-  transition: 1.1s ease 1s;
+  transition:opacity 1.1s ease .8s,filter 1.1s ease .8s;
   
   @include mq{
     width: calc(442/630)*100%;
@@ -307,7 +302,7 @@ body, html {
     top: auto;
     left: auto;
     transform: none;
-    transition: 1.1s ease;
+    transition:opacity 1.1s ease .1s,filter 1.1s ease .1s;
   }
 }
 
@@ -369,9 +364,9 @@ body, html {
   margin-left: calc(115/$base_w_sp)*100%;
   opacity: 0;
   clip-path: inset(0 0 100% 0);
-  transition: 1s ease .6s;
+  transition:opacity 1s ease .1s,clip-path 1s ease .2s;
   
-
+  
   @include mq{
     width: 100%;
     height: 100%;
@@ -380,6 +375,7 @@ body, html {
     left: 0;
     padding: 0;
     margin: 0;
+    transition:opacity 1s ease .6s,clip-path 1s ease .7s;
     img{
       width: 100%;
       height: 100vh;
@@ -410,7 +406,8 @@ body, html {
   left: 50%;
   transform: translateX(-50%);
   width: 0;
-  transition:all .6s ease 1.6s;
+  opacity: 0;
+  transition:width .6s ease 1.6s,opacity 1s ease 1.4s;
   z-index: 10;
   cursor: pointer;
 
@@ -433,7 +430,7 @@ body, html {
 
   img{
     opacity: 0;
-    transition: opacity 1s ease 2.4s;
+    transition: opacity 1s ease 2s;
   }
 
   @include mq{
@@ -529,20 +526,21 @@ body, html {
   height: 100%;
   opacity: 0;
   clip-path: inset(0 0 100% 0);
-  transition: 1s ease .6s;
-
+  transition:opacity 1s ease .1s,clip-path 1s ease .2s;
+  
   img{
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
-
+  
   @include mq{
     position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
     width: 100%;
+    transition:opacity 1s ease .6s,clip-path 1s ease .7s;
     img{
       object-fit: cover;
       width: 100%;
@@ -558,7 +556,7 @@ body, html {
   bottom: calc(53/635)*100%;
   left: calc(40/$base_w_sp)*100%;
   clip-path: inset(0 0 100% 0);
-  transition: 1s ease 1.4s;
+  transition:clip-path 1s ease 1.3s,opacity 1s ease 1.3s;
   opacity: 0;
   
   @include mq{
@@ -594,7 +592,7 @@ body, html {
   
     opacity: 0;
     filter: blur(10px);
-    transition:all 1s ease;
+    transition:opacity 1s ease .1s,filter 1s ease .1s;
   
 }
 
