--- a/assets/sass/202312product_zakka1.scss
+++ b/assets/sass/202312product_zakka1.scss
@@ -1106,7 +1106,7 @@ body {
               opacity: 0;
 
               img{
-                animation: usagiAnim 2s linear 1s 1;
+                animation: usagiAnim 2s linear 1s infinite;
               }
 
               &.show{
@@ -1123,23 +1123,23 @@ body {
               @keyframes usagiAnim{
                 0% {
                   transform: rotate(0);
-              }
-              10% {
-                  transform: rotate(12deg);
-              }
-              20% {
-                  transform: rotate(0);
-              }
-              
-              30% {
-                  transform: rotate(12deg);
-              }
-              40% {
-                  transform: rotate(0);
-              }
-              100% {
-                  transform: rotate(0);
-              }
+                }
+                10% {
+                    transform: rotate(12deg);
+                }
+                20% {
+                    transform: rotate(0);
+                }
+                
+                30% {
+                    transform: rotate(12deg);
+                }
+                40% {
+                    transform: rotate(0);
+                }
+                100% {
+                    transform: rotate(0);
+                }
               }
             }
 
@@ -1154,6 +1154,9 @@ body {
               opacity: 0;
               transform: translateX(-28px);
 
+              img{
+                animation: pyonpyon 2s linear 2s infinite;
+              }
               &.show{
                 transform: translateX(0);
                 opacity: 1;
@@ -1162,6 +1165,28 @@ body {
                 width: calc((333/1270) * #{$new_vh});
                 margin-top: calc((708/1270) * #{$new_vh});
                 margin-right: calc((-86/1270) * #{$new_vh});
+              }
+
+              @keyframes pyonpyon{
+                0%{
+                  transform: translateY(0px);
+                }
+                10% {
+                  transform: translateY(-5%);
+                }
+                20% {
+                  transform: translateY(0px);
+                }
+                30% {
+                  transform: translateY(-5%);
+                }
+                40% {
+                  transform: translateY(0px);
+                }
+                100% {
+                  transform: translateY(0px);
+                }
+                
               }
             }
 
@@ -2220,7 +2245,7 @@ body {
               margin-right: calc(-356px/2);
               z-index: 3;
               transform:translateX(-15px);
-              transition:all 1s ease .3s;
+              transition:all 1s ease .8s;
               opacity: 0;
 
               &.show{
@@ -2228,10 +2253,37 @@ body {
                 opacity: 1;
               }
 
+              .anim-inner{
+                animation: usagiAnim2 3s steps(1) 1.4s infinite;
+              }
+
               @include mq_maxH() {
                 width: calc((325/1270) * #{$new_vh});
                 margin-top: calc((71/1270) * #{$new_vh});
                 margin-right: calc((-356/1270) * #{$new_vh});
+              }
+
+              @keyframes usagiAnim2{  
+               
+                0% {
+                    transform: rotate(0);
+                }
+                10% {
+                    transform: rotate(10deg);
+                }
+                20% {
+                    transform: rotate(0);
+                }
+                
+                30% {
+                    transform: rotate(10deg);
+                }
+                40% {
+                    transform: rotate(0);
+                }
+                100% {
+                    transform: rotate(0);
+                }
               }
             }
             .deco-illust2{
@@ -2243,7 +2295,7 @@ body {
               margin-right: calc(-678px/2);
               z-index: 3;
               transform:translateX(15px);
-              transition:all 1s ease .3s;
+              transition:all 1s ease .8s;
               opacity: 0;
 
               &.show{
@@ -2256,6 +2308,33 @@ body {
                 margin-right: calc((-678/1270) * #{$new_vh});
               }
 
+              .anim-inner{
+                animation: kaeruAnim 3s steps(1) 1.4s infinite;
+              }
+
+              @keyframes kaeruAnim{  
+               
+                0% {
+                    transform: rotate(0);
+                }
+                10% {
+                    transform: rotate(-10deg);
+                }
+                20% {
+                    transform: rotate(0);
+                }
+                
+                30% {
+                    transform: rotate(-10deg);
+                }
+                40% {
+                    transform: rotate(0);
+                }
+                100% {
+                    transform: rotate(0);
+                }
+              }
+
             }
             .deco-illust3{
               width: calc(1152px/2);
@@ -2265,10 +2344,24 @@ body {
               margin-top: calc(286px/2);
               margin-right: calc(-917px/2);
               z-index: 2;
+              overflow: hidden;
               @include mq_maxH() {
                 width: calc((1152/1270) * #{$new_vh});
                 margin-top: calc((286/1270) * #{$new_vh});
                 margin-right: calc((-917/1270) * #{$new_vh});
+              }
+
+              img{
+                transform: translateY(40%);
+                transition: 1s ease .2s;
+                opacity: 0;
+              }
+
+              &.show{
+                img{
+                  transform: translateY(0%);
+                  opacity: 1;
+                }
               }
             }
           }
@@ -2776,6 +2869,7 @@ body {
           width: calc(269px/2);
           position: relative;
           margin-bottom: calc(50px/2);
+          z-index: 5;
           @include mq_maxH() {
             width: calc((269/1270) * #{$new_vh});
             margin-bottom: calc((50/1270) * #{$new_vh});
@@ -2788,9 +2882,14 @@ body {
           left: calc(-56px/2);
           width: calc(186px/2);
           transform: translateX(-6px);
-          transition: 1s ease .4s;
+          transition: 1s ease .8s;
+          z-index: 10;
           &.show{
             transform: translateX(0px);
+          }
+
+          img{
+            animation: usagiAnim2 3s steps(1) 1.6s infinite;
           }
           @include mq_maxH() {
             width: calc((186/1270) * #{$new_vh});
@@ -2804,9 +2903,14 @@ body {
           top: calc(333px/2);
           right: calc(-36px/2);
           transform: translateX(6px);
-          transition: 1s ease .4s;
+          transition: 1s ease .8s;
+          z-index: 10;
           &.show{
             transform: translateX(0px);
+          }
+
+          img{
+            animation: kaeruAnim 3s steps(1) 1.6s infinite;
           }
           @include mq_maxH() {
             width: calc((156/1270) * #{$new_vh});
@@ -2819,11 +2923,21 @@ body {
           position: absolute;
           top: calc(75px/2);
           left: calc(25px/2);
-          opacity: 0;
-          transition:all 1s ease .2s;
+          transition:all 1s ease .1s;
+          overflow: hidden;
+          z-index: 10;
+
+          img{
+            transition:transform 1s ease .1s,opacity 1s ease .1s;
+            transform: translateY(-20%);
+            opacity: 0;
+          }
 
           &.show{
-            opacity: 1;
+            img{
+              transform: translateY(0%);
+              opacity: 1;
+            }
           }
           @include mq_maxH() {
             width: calc((224/1270) * #{$new_vh});
