--- a/assets/sass/202312product_zakka.scss
+++ b/assets/sass/202312product_zakka.scss
@@ -267,16 +267,23 @@ body, html {
 .main-ttl-background{
   display: none;
   @include mq{
-    display: block;
-    width: 102%;
-    height: 100%;
-    background-repeat: repeat;
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
+  // position: absolute;
+  display: block;
+    
+    &::before{
+      content: '';
+      background-image: url(/static/docs/nikoand/pages/202312product_zakka/assets/img/tobira-background.png);
+      display: block;
+      width: 102%;
+      height: 100%;
+      background-repeat: repeat;
+      background-size: contain;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 2;
+    }
   
     img{
       height: 100vh;
