--- a/assets/sass/202312product_zakka1.scss
+++ b/assets/sass/202312product_zakka1.scss
@@ -250,8 +250,10 @@ body {
     // visibility: hidden;
 
     background-image: url(/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page1-bg-layer.png);
-    background-size: cover;
-    // background-attachment: fixed;
+    background-size: 100px 100px;
+    background-repeat: repeat;
+    width: 100%;
+    height: 100%;
     
     .pc-link {
       display: none;
@@ -666,7 +668,7 @@ body {
             }
           }
           @keyframes appear1 {
-            0%, 33.33% {
+            0%, 32.33% {
               opacity: 1;
             }
             33.34%, 100% {
@@ -675,10 +677,10 @@ body {
           }
           
           @keyframes appear2 {
-            0%, 33.33% {
+            0%, 32.33% {
               opacity: 0;
             }
-            33.34%, 66.66% {
+            33.34%, 65.66% {
               opacity: 1;
             }
             66.67%, 100% {
@@ -693,10 +695,10 @@ body {
             0%, 33.33% {
               opacity: 0;
             }
-            33.34%, 66.66% {
+            33.34%, 65.66% {
               opacity: 0;
             }
-            66.67%, 100% {
+            66.67%, 99% {
               opacity: 1;
             }
           }
@@ -927,7 +929,7 @@ body {
 
             .ph1{
               &.show{
-                animation: appear1 3s steps(2) .5s  infinite;
+                animation: appear1 4s steps(2) infinite;
               }
             }
             .ph2{
@@ -935,7 +937,7 @@ body {
               top: 0;
               left: 0;
               &.show{
-                animation: appear2 3s steps(2) .5s  infinite;
+                animation: appear2 4s steps(2)  infinite;
               }
             }
             
@@ -944,7 +946,7 @@ body {
               top: 0;
               left: 0;
               &.show{
-                animation: appear3 3s steps(2) .5s  infinite;
+                animation: appear3 4s steps(2) infinite;
               }
             }
             
@@ -1268,8 +1270,12 @@ body {
             
             .ph1{
               width: calc(850px/2);
+              opacity: 0;
+              // transition: 1s ease,filter 1s ease;
+              // filter: blur(10px);
               &.show{
-                animation: appear1 3s steps(2) .5s infinite;
+                // filter: blur(0);
+                animation: appear1 3s steps(2) infinite;
               }
               @include mq_maxH() {
                 width: calc((850/1270) * #{$new_vh});
@@ -1280,8 +1286,13 @@ body {
               position: absolute;
               top: calc(90px/2);
               left: calc(73px/2);
+              // opacity: 0;
+              // transition: 1s ease 1s;
+              // filter: blur(0);
+              
               &.show{
-                animation: appear2 3s steps(2) .5s infinite;
+                // opacity: 1;
+                animation: appear2 3s steps(2) infinite;
               }
 
               @include mq_maxH() {
@@ -1296,8 +1307,12 @@ body {
               position: absolute;
               top: calc(144px/2);
               left: calc(133px/2);
+              // opacity: 0;
+              // transition: 1s ease 2s;
+              // filter: blur(0);
               &.show{
-                animation: appear3 3s steps(2) .5s infinite;
+                // opacity: 1;
+                animation: appear3 3s steps(2) infinite;
               }
               @include mq_maxH() {
                 width: calc((590/1270) * #{$new_vh});
@@ -3378,12 +3393,20 @@ body {
     z-index: 1;
     display: flex;
    
-  
+    
+    .scroll-block1{
+      height: 638px;
+
+      @include mq_maxH() {
+        height: calc((1276/1270) * #{$new_vh});
+      }
+    }
     .scroll-block1,
     .scroll-block3 {
       width: (111px/2);
       background-image: url(/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page1-bg-layer.png);
-      background-size: cover;
+      background-size: 100px 100px;
+      background-repeat: repeat;
     }
     .scroll-block2 {
       width: 100%;
